{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 53,
  "lineage": "b9dedd86-175d-69a9-3caf-a0d166778389",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0995999ec832930d7",
            "arn": "arn:aws:ec2:us-east-1:805046891371:elastic-ip/eipalloc-0995999ec832930d7",
            "domain": "vpc",
            "id": "eipalloc-0995999ec832930d7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-153-247.compute-1.amazonaws.com",
            "public_ip": "35.170.153.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-processor-qa-eip-1"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-eip-1",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030a656a4ab4526cd",
            "arn": "arn:aws:ec2:us-east-1:805046891371:elastic-ip/eipalloc-030a656a4ab4526cd",
            "domain": "vpc",
            "id": "eipalloc-030a656a4ab4526cd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-227-94-189.compute-1.amazonaws.com",
            "public_ip": "34.227.94.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-processor-qa-eip-2"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-eip-2",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:internet-gateway/igw-0be7a1701900441f8",
            "id": "igw-0be7a1701900441f8",
            "owner_id": "805046891371",
            "tags": {
              "Name": "image-processor-qa-igw"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-igw",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0995999ec832930d7",
            "association_id": "eipassoc-0fd831df0a0a8c367",
            "connectivity_type": "public",
            "id": "nat-0399fe45f6f375be6",
            "network_interface_id": "eni-0000b54ab2efac686",
            "private_ip": "10.0.1.182",
            "public_ip": "35.170.153.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0856ad333fb4c55d3",
            "tags": {
              "Name": "image-processor-qa-nat-1"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-nat-1",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030a656a4ab4526cd",
            "association_id": "eipassoc-02af87aefaa4c4b8a",
            "connectivity_type": "public",
            "id": "nat-050dac2242e8135d1",
            "network_interface_id": "eni-0cbacee198ef772e1",
            "private_ip": "10.0.2.13",
            "public_ip": "34.227.94.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04a8490e5940a11f6",
            "tags": {
              "Name": "image-processor-qa-nat-2"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-nat-2",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-0502fa1f759767649",
            "id": "rtb-0502fa1f759767649",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0399fe45f6f375be6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-qa-rt-private-1"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-private-1",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-0bf554fea35e201a0",
            "id": "rtb-0bf554fea35e201a0",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050dac2242e8135d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-qa-rt-private-2"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-private-2",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-0186c1302302eba1a",
            "id": "rtb-0186c1302302eba1a",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be7a1701900441f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-qa-rt-public"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-public",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039195b1e07388d57",
            "route_table_id": "rtb-0502fa1f759767649",
            "subnet_id": "subnet-08b11191f828fcf65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfe52ce1af4671cc",
            "route_table_id": "rtb-0bf554fea35e201a0",
            "subnet_id": "subnet-0769265907543af30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abdfcfd868421c5c",
            "route_table_id": "rtb-0186c1302302eba1a",
            "subnet_id": "subnet-0856ad333fb4c55d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063a447334eecb8a6",
            "route_table_id": "rtb-0186c1302302eba1a",
            "subnet_id": "subnet-04a8490e5940a11f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-0da522ec7549475b3",
            "description": "SG para Lambda crop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS hacia S3 y SQS endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0da522ec7549475b3",
            "ingress": [],
            "name": "image-processor-qa-sg-crop-lambda",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-qa-sg-crop-lambda"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-crop-lambda",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-04e47f1c6dad6b933",
            "description": "SG para Lambda upload",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS hacia S3 y SQS endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-04e47f1c6dad6b933",
            "ingress": [],
            "name": "image-processor-qa-sg-upload-lambda",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-qa-sg-upload-lambda"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-upload-lambda",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-04545a513b73ce10b",
            "description": "SG para VPC Endpoint de SQS",
            "egress": [],
            "id": "sg-04545a513b73ce10b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Desde lambdas",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e47f1c6dad6b933",
                  "sg-0da522ec7549475b3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "image-processor-qa-sg-vpce-sqs",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-qa-sg-vpce-sqs"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-vpce-sqs",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.crop_lambda",
            "aws_security_group.upload_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-08b11191f828fcf65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b11191f828fcf65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-qa-private-1"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-private-1",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-0769265907543af30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0769265907543af30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-qa-private-2"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-private-2",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-0856ad333fb4c55d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0856ad333fb4c55d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-qa-public-1"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-public-1",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-04a8490e5940a11f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a8490e5940a11f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-qa-public-2"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-public-2",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc/vpc-0018fabc7498d08f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0721d5e1f4ed2ab3b",
            "default_route_table_id": "rtb-037a0e0980f99091e",
            "default_security_group_id": "sg-0d58073fab052c8b8",
            "dhcp_options_id": "dopt-04624349cc8a268d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0018fabc7498d08f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037a0e0980f99091e",
            "owner_id": "805046891371",
            "tags": {
              "Name": "image-processor-qa-vpc"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpc",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc-endpoint/vpce-0660f3781ab3565ef",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0660f3781ab3565ef",
            "ip_address_type": "ipv4",
            "owner_id": "805046891371",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::image-processor-qa-images-20a1e2c4/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0502fa1f759767649",
              "rtb-0bf554fea35e201a0"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "image-processor-qa-vpce-s3"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpce-s3",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.images",
            "aws_subnet.public",
            "aws_vpc.main",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc-endpoint/vpce-090fa9ca01397e3dc",
            "dns_entry": [
              {
                "dns_name": "vpce-090fa9ca01397e3dc-msykiby8.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-090fa9ca01397e3dc-msykiby8-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-090fa9ca01397e3dc-msykiby8-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06357003VEOT1WWFTOPI"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z05031712KMKE13GOVWBJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-090fa9ca01397e3dc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-069d2e7332f78294a",
              "eni-0dfb56c4db305c9b5"
            ],
            "owner_id": "805046891371",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-04545a513b73ce10b"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.86",
                "subnet_id": "subnet-08b11191f828fcf65"
              },
              {
                "ipv4": "10.0.12.179",
                "subnet_id": "subnet-0769265907543af30"
              }
            ],
            "subnet_ids": [
              "subnet-0769265907543af30",
              "subnet-08b11191f828fcf65"
            ],
            "tags": {
              "Name": "image-processor-qa-vpce-sqs"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpce-sqs",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0018fabc7498d08f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.crop_lambda",
            "aws_security_group.upload_lambda",
            "aws_security_group.vpce_sqs",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}